--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Gold Guarenteed Coin</title>
     <link rel="stylesheet" href="dist/output.css" />
+    <link rel="stylesheet" href="src/style.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
@@ -14,6 +15,17 @@
     <script src="node_modules/gsap/dist/ScrollTrigger.min.js"></script>
     <script src="node_modules/@lottiefiles/lottie-player/dist/lottie-player.js"></script>
     <script src="script.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="src/main.js"></script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-16HLETNKXB"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-16HLETNKXB');
+    </script>
 
     <style>
       html,
@@ -172,7 +184,7 @@
                       >
                     </li>
                     <li>
-                      <a href="https://twitter.com/GoldGuaranteed">Twitter</a>
+                      <a href="https://twitter.com/GGCMOfficial">Twitter</a>
                     </li>
                     <li><a href="mailto: info@GGCMm.io">E-Mail</a></li>
                   </ul>
@@ -215,7 +227,7 @@
         <div class="container h-full relative">
           <div></div>
           <div
-            class="absolute left-1/2 xl:left-auto -translate-x-1/2 xl:-translate-x-0 top-1/2 -translate-y-1/2 xl:right-40 w-[300px] xl:w-[400px] h-[330px] xl:h-[400px] bg-[rgba(90,85,79,0.2)] rounded-[1.25rem]"
+            class="absolute left-1/2 xl:left-auto -translate-x-1/2 xl:-translate-x-0 top-1/2 -translate-y-1/2 xl:right-40 w-[300px] xl:w-[400px] h-[330px] xl:h-[400px] bg-[rgba(90,85,79,0.2)] rounded-[1.25rem] fix-coin"
             id="s1-coin"
           >
             <img
@@ -224,7 +236,7 @@
               class="absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 max-w-full max-h-full"
             />
             <div
-              class="text-[#FEC267] text-3xl font-bold absolute top-0 -translate-y-full -mt-3 left-2/3 side hidden sm:block s1-out-right"
+              class="text-[#FEC267] text-3xl font-bold absolute top-0 -translate-y-full -mt-3 left-2/3 side hidden sm:block"
             >
               <div class="flex text-white gap-3 items-center mb-1">
                 <div class="text-[5rem] leading-[5rem]">%30</div>
@@ -233,12 +245,12 @@
               Real Gold Storage
             </div>
             <div
-              class="text-[#FEC267] absolute top-14 -translate-x-full -ml-8 side hidden sm:block s1-out"
+              class="text-[#FEC267] absolute top-14 -translate-x-full -ml-8 side hidden sm:block"
             >
               <div class="mb-4">Private Sale Starts at</div>
               <div class="flex text-white gap-3 text-3xl items-center mb-5">
                 <div class="text-[5rem] leading-[5rem]">01</div>
-                <div>May<br />2022</div>
+                <div>Jun<br />2022</div>
               </div>
               <a
                 href="https://dashboard.ggcm.io/"
@@ -253,13 +265,13 @@
               </a>
             </div>
             <div
-              class="text-[#FEC267] text-3xl font-bold absolute top-full left-1/3 mt-7 whitespace-nowrap side hidden sm:block s1-out"
+              class="text-[#FEC267] text-3xl font-bold absolute top-full left-1/3 mt-7 whitespace-nowrap side hidden sm:block"
             >
               Passive Income <span class="text-white">with NFTs</span>
             </div>
           </div>
           <div
-            class="text-white text-3xl md:text-6xl 2xl:text-8xl font-bold absolute left-8 xl:left-0 bottom-0 md:bottom-10 mg:bottom-44"
+            class="text-white text-3xl md:text-6xl 2xl:text-7xl font-bold absolute left-8 xl:left-0 bottom-0 md:bottom-10 mg:bottom-44 fix-text-white"
             id="s1-left"
           >
             <div>Bringing <span class="text-[#FEC267]">Gold</span></div>
@@ -272,7 +284,7 @@
                   viewBox="0 0 115 113"
                   fill="none"
                   xmlns="http://www.w3.org/2000/svg"
-                  class="inline pt-6 pr-6 md:w-70 h-70"
+                  class="inline pt-6 pr-6 md:w-70 h-70 fix-arrow-svg"
                   id="s1-arrow"
                 >
                   <path
@@ -944,34 +956,14 @@
             How to Buy <span class="text-[#FEC267]">GGCMM Token</span> from
             Dashboard?
           </h2>
-          <div
-            class="flex flex-col lg:flex-row items-start justify-center gap-5 mb-12 sm:mb-24"
-            id="faq"
-          >
-            <button>
-              <span class="text-[#FEC267]">1)</span>
-              <span
-                class="yellow-line relative after:content-[' '] after:absolute after:top-full after:left-0 after:w-full after:h-[3px] after:shadow-[0px_10px_20px_#FEC267] after:bg-[#FEC267] after:translate-y-1"
-                >How to sign up our backoffice?</span
-              >
-            </button>
-            <button>
-              <span class="text-[#FEC267]">2)</span>
-              <span
-                class="yellow-line relative after:content-[' '] after:absolute after:top-full after:left-0 after:w-full after:h-[3px] after:shadow-[0px_10px_20px_#FEC267] after:bg-[#FEC267] after:translate-y-1 after:hidden"
-                >How to reset your password?</span
-              >
-            </button>
-            <button>
-              <span class="text-[#FEC267]">3)</span>
-              <span
-                class="yellow-line relative after:content-[' '] after:absolute after:top-full after:left-0 after:w-full after:h-[3px] after:shadow-[0px_10px_20px_#FEC267] after:bg-[#FEC267] after:translate-y-1 after:hidden"
-                >How to buy GGCMM Tokens?</span
-              >
-            </button>
-          </div>
-          <div class="flex justify-center mb-24" id="watch">
+          <div class="flex justify-center mb-24 fix-watch" id="watch">
+            <div class="fix-btn-group">
+              <button class="fix-btn" onclick="videobtn1()">1) How sign up to backoffice</button>
+              <button class="fix-btn" onclick="videobtn2()">2) How to create deposit address?</button>
+              <button class="fix-btn" onclick="videobtn3()">3) How to buy GGCM from backoffice</button>
+            </div>
             <video
+              id="videoscreen"
               src="img/cypto.mp4"
               class="drop-shadow-[0px_10px_20px_#FEC267] rounded-[14px] w-[1138px] max-w-full object-cover aspect-video"
               controls
@@ -1228,7 +1220,7 @@
               </svg>
             </a>
             <a
-              href="https://twitter.com/GoldGuaranteed"
+              href="https://twitter.com/GGCMOfficial"
               target="_blank"
               class="group"
             >
